--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a href="#" class="link">выяснили</a>
-            , что мозгу тяжело концентрироваться даже на двух делах
+            <a href="#" class="link">выяснили</a>,
+            что мозгу тяжело концентрироваться даже на двух делах
             одновременно. А когда в поле внимания попадает несколько важных
             задач, организм паникует и выделяет кортизол и адреналин — «гормоны
             стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
@@ -169,8 +169,8 @@
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                 class="link"
                 >показал</a
-              >
-              , что созерцание природы повышает концентрацию, в то время как
+              >,
+              что созерцание природы повышает концентрацию, в то время как
               после просмотра городских пейзажей она наоборот понижается. Можно
               совместить прогулку с физическими упражнениями или бегом — так в
               мозг поступит ещё больше кислорода и он будет лучше работать. Но и
