--- a/index.html
+++ b/index.html
@@ -204,31 +204,31 @@
           </h3>
           <img
             class="main__section-image"
-            src="/images/sunset.png"
+            src="./images/sunset.png"
             alt="Закат"
             loading="lazy"
           />
           <img
             class="main__section-image"
-            src="/images/ice-cream.png"
+            src="./images/ice-cream.png"
             alt="Мороженое"
             loading="lazy"
           />
           <img
             class="main__section-image"
-            src="/images/tape.png"
+            src="./images/tape.png"
             alt="Видеокассета"
             loading="lazy"
           />
           <img
             class="main__section-image"
-            src="/images/books.png"
+            src="./images/books.png"
             alt="Книги"
             loading="lazy"
           />
           <img
             class="main__section-image"
-            src="/images/street.png"
+            src="./images/street.png"
             alt="Улица"
             loading="lazy"
           />
