--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
               попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
           </section>
+          <img
+            class="main__section-image"
+            src="./images/sunset.png"
+            alt="Закат"
+            loading="lazy"
+          />
           <section class="main__sub-section">
             <h4 class="main__sub-section-header title-decor">Прогуляйтесь</h4>
             <p class="main__section-text">
