--- a/index.html
+++ b/index.html
@@ -58,25 +58,29 @@
       </div>
     </header>
     <main class="main">
-      <article class="main__article">
-        <h2 class="main__article-header">Почему сосредоточиться так сложно</h2>
-        <section class="main__section">
-          <h3 class="main__section-header title-decor">Многозадачность</h3>
-          <p class="main__section-text">
+      <section class="main__section">
+        <h2 class="main__section-header">Почему сосредоточиться так сложно</h2>
+        <article class="main__article margin-left">
+          <h3 class="main__article-header title-decor">Многозадачность</h3>
+          <p class="main__article-text">
             Особенно сложно сосредоточиться, когда задач много и все они —
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a href="#" class="link">выяснили</a>, что мозгу тяжело
-            концентрироваться даже на двух делах одновременно. А когда в поле
-            внимания попадает несколько важных задач, организм паникует и
-            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-            работаем невнимательно: ошибаемся и быстро устаём.
+            <a
+              href="https://dana.org/article/multicosts-of-multitasking/"
+              class="link"
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
           </p>
-        </section>
-        <section class="main__section">
-          <h3 class="main__section-header title-decor">Дофамин</h3>
-          <p class="main__section-text">
+        </article>
+        <article class="main__article margin-left">
+          <h3 class="main__article-header title-decor">Дофамин</h3>
+          <p class="main__article-text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
             невозможности сосредоточиться замешана и полная противоположность
             стрессу — дофамин. Это вещество участвует в системе вознаграждения
@@ -86,13 +90,13 @@
             удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
             тем больше удовольствия получаешь.
           </p>
-        </section>
-      </article>
-      <article class="main__article header-on-top">
-        <h2 class="main__article-header">Что снижает концентрацию внимания?</h2>
-        <section class="main__section">
-          <h3 class="main__section-header title-decor">Многозадачность</h3>
-          <p class="main__section-text">
+        </article>
+      </section>
+      <section class="main__section section-header-on-top">
+        <h2 class="main__section-header">Что снижает концентрацию внимания?</h2>
+        <article class="main__article">
+          <h3 class="main__article-header title-decor">Многозадачность</h3>
+          <p class="main__article-text">
             Как концентрация может снижаться из-за… концентрации? Любая
             стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
             мозг постоянно «сканировать» окружающую среду на предмет опасности.
@@ -100,10 +104,10 @@
             — невозможно. Концентрация — мышца, и она может не выдержать, если
             не давать ей отдохнуть.
           </p>
-        </section>
-        <section class="main__section">
-          <h3 class="main__section-header title-decor">Еда</h3>
-          <p class="main__section-text">
+        </article>
+        <article class="main__article">
+          <h3 class="main__article-header title-decor">Еда</h3>
+          <p class="main__article-text">
             «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
             доставляют в мозг энергию и помогают ему лучше работать. Но уходит
             эта энергия также быстро, как и приходит. А мы в результате попадаем
@@ -111,10 +115,10 @@
             заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
             больше быстрых углеводов.
           </p>
-        </section>
-        <section class="main__section">
-          <h3 class="main__section-header title-decor">Гаджеты</h3>
-          <p class="main__section-text">
+        </article>
+        <article class="main__article">
+          <h3 class="main__article-header title-decor">Гаджеты</h3>
+          <p class="main__article-text">
             Да-да, это та самая ситуация, когда на экране ноутбука — код, в
             наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
             утятами. В результате мозг пытается переключиться с одной задачи на
@@ -123,22 +127,22 @@
             что чем больше времени мы проводим в гаджетах, тем больше времени
             затем нужно, чтобы вернуться к работе.
           </p>
-        </section>
-      </article>
-      <article class="main__article">
-        <h2 class="main__article-header">
+        </article>
+      </section>
+      <section class="main__section">
+        <h2 class="main__section-header">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <section class="main__section sub-level-section">
-          <h3 class="main__section-header title-decor no-margin-bottom">
+        <article class="main__article sub-level-article margin-left">
+          <h3 class="main__article-header title-decor no-margin-bottom">
             5 простых (на самом деле не очень) советов
           </h3>
-          <section class="main__sub-section">
-            <h4 class="main__sub-section-header title-decor">
+          <article class="main__sub-article">
+            <h4 class="main__sub-article-header title-decor">
               Представьте небо и облака
             </h4>
-            <p class="main__section-text">
+            <p class="main__article-text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
               как раз и мешают эти сложные задачи делать. В такие моменты можно
@@ -148,21 +152,21 @@
               вернуться в настоящий момент, а не волноваться о потенциальных
               проблемах из будущего.
             </p>
-          </section>
-          <section class="main__sub-section">
-            <h4 class="main__sub-section-header title-decor">
+          </article>
+          <article class="main__sub-article">
+            <h4 class="main__sub-article-header title-decor">
               Включите музыку
             </h4>
-            <p class="main__section-text">
+            <p class="main__article-text">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
               Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
               попробовать включить плейлист с «белым шумом» или нейромузыкой.
             </p>
-          </section>
-          <section class="main__sub-section">
-            <h4 class="main__sub-section-header title-decor">Прогуляйтесь</h4>
-            <p class="main__section-text">
+          </article>
+          <article class="main__sub-article">
+            <h4 class="main__sub-article-header title-decor">Прогуляйтесь</h4>
+            <p class="main__article-text">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
@@ -174,63 +178,57 @@
               мозг поступит ещё больше кислорода и он будет лучше работать. Но и
               простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
-          </section>
-          <section class="main__sub-section">
-            <h4 class="main__sub-section-header title-decor">Хорошо ешьте</h4>
-            <p class="main__section-text">
+          </article>
+          <article class="main__sub-article">
+            <h4 class="main__sub-article-header title-decor">Хорошо ешьте</h4>
+            <p class="main__article-text">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
               высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
               чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
             </p>
-          </section>
-          <section class="main__sub-section">
-            <h4 class="main__sub-section-header title-decor">Читайте</h4>
-            <p class="main__section-text">
+          </article>
+          <article class="main__sub-article">
+            <h4 class="main__sub-article-header title-decor">Читайте</h4>
+            <p class="main__article-text">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
               даже секунд. А вот интересная книга способна затянуть и на
               несколько часов и круто тренирует направленное внимание.
             </p>
-          </section>
-        </section>
-      </article>
-      <article class="main__article">
-        <!-- Убрал lazy load из-за автотестов гита -->
-        <section class="main__section pictures-section">
-          <h3 class="main__section-header title-decor no-margin-bottom">
-            А можно в картинках?
-          </h3>
-          <img
-            class="main__section-image"
-            src="./images/sunset.png"
-            alt="Закат"
-          />
-          <img
-            class="main__section-image"
-            src="./images/ice-cream.png"
-            alt="Мороженое"
-          />
-          <img
-            class="main__section-image"
-            src="./images/tape.png"
-            alt="Видеокассета"
-          />
-          <img
-            class="main__section-image"
-            src="./images/books.png"
-            alt="Книги"
-          />
-          <img
-            class="main__section-image"
-            src="./images/street.png"
-            alt="Улица"
-          />
-        </section>
+          </article>
+        </article>
+      </section>
+      <!-- Убрал lazy load из-за автотестов гита -->
+      <article class="main__article pictures-article">
+        <h3 class="main__article-header title-decor no-margin-bottom">
+          А можно в картинках?
+        </h3>
+        <img
+          class="main__article-image"
+          src="./images/sunset.png"
+          alt="Закат"
+        />
+        <img
+          class="main__article-image"
+          src="./images/ice-cream.png"
+          alt="Мороженое"
+        />
+        <img
+          class="main__article-image"
+          src="./images/tape.png"
+          alt="Видеокассета"
+        />
+        <img class="main__article-image" src="./images/books.png" alt="Книги" />
+        <img
+          class="main__article-image"
+          src="./images/street.png"
+          alt="Улица"
+        />
       </article>
     </main>
     <footer class="footer decorated-zone">
-      <div class="footer__title title">focus</div>
+      <span class="footer__title title">focus</span>
     </footer>
   </body>
 </html>
